[package]
name = "alginate_cube"
version = "0.1.0"
authors = ["Soham Chowdhury <atmosopher@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9"
bit_collection = "0.2.3"
lazy_static = "1.4.0"
rand = "0.7.2"
bitvec = "0.16.1"
